--- a/python-organizer/requirements.txt
+++ b/python-organizer/requirements.txt
@@ -1,7 +1,8 @@
 # Requirements pour Music Organizer Pro
 # Installation: pip install -r requirements.txt
 
-mutagen>=1.45.1
-pyautogui>=0.9.53
-pyperclip>=1.8.2
-pywin32>=305
+mutagen>=1.45.0
+pyautogui>=0.9.50
+pyperclip>=1.8.0
+pywin32>=227
+psutil>=5.8.0
