--- a/V2/python-server/requirements.txt
+++ b/V2/python-server/requirements.txt
@@ -7,6 +7,7 @@ flask-cors>=4.0.0
 # Automatisation Windows
 pywinauto>=0.6.8
 pywin32>=306
+psutil>=5.9.0
 
 # Organisation et tags ID3
 mutagen>=1.47.0
