--- a/SongSurf/chrome-extension/manifest.json
+++ b/SongSurf/chrome-extension/manifest.json
@@ -1,17 +1,15 @@
 {
   "manifest_version": 3,
-  "name": "GrabSong V3",
-  "version": "3.0.0",
-  "description": "Télécharge automatiquement de la musique depuis YouTube Music via yt-dlp",
+  "name": "SongSurf",
+  "version": "4.0.0",
+  "description": "Télécharge de la musique depuis YouTube Music via yt-dlp - Version simplifiée",
   "permissions": [
     "activeTab",
-    "storage",
-    "clipboardWrite",
-    "clipboardRead"
+    "storage"
   ],
   "host_permissions": [
     "https://music.youtube.com/*",
-    "http://localhost:5000/*"
+    "http://localhost:8080/*"
   ],
   "background": {
     "service_worker": "background.js"
