--- a/SongSurf/chrome-extension/manifest.json
+++ b/SongSurf/chrome-extension/manifest.json
@@ -24,14 +24,14 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+      "16": "icons/Song-logo.png",
+      "48": "icons/Song-logo.png",
+      "128": "icons/Song-logo.png"
     }
   },
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/Song-logo.png",
+    "48": "icons/Song-logo.png",
+    "128": "icons/Song-logo.png"
   }
 }
